# rustockstats

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
src/: indicator.rs  lib.rs
tests/: indicators.rs
tests/data/: 002032_yf_2020_2021.csv
